feat: add iframe for association participation

--- a/public/sass/base_fiche.css
+++ b/public/sass/base_fiche.css
@@ -1,325 +1,27 @@
 /*
- FICHE
+ * ADMINISTRATION PANEL
  */
-#topImageShow {
-  padding-top: 0;
-  padding-bottom: 0;
-  z-index: 0; }
-  #topImageShow .column {
-    min-height: 300px; }
-  #topImageShow .topImageBanniereContainer:after {
-    content: '\A';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.5);
-    opacity: 1; }
-  #topImageShow .topImageBanniere {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    -webkit-filter: blur(10px) opacity(1);
-    filter: blur(10px) opacity(1);
-    transform: scale(1.1); }
+#tableAdmin thead th {
+  background: #1074b2;
+  color: #FFFFFF; }
 
-#topInfo {
-  color: #FFFFFF;
-  z-index: 10;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  text-shadow: 1px 1px 2px #1B1C1D; }
-  #topInfo .grid {
-    padding: 0; }
-  #topInfo .column {
-    margin: 0 auto; }
-  #topInfo p {
-    text-align: justify; }
-    #topInfo p.AllSynopsis {
-      text-align: right;
-      text-decoration: underline;
-      margin-bottom: 1em; }
-    #topInfo p.showResume {
-      margin-bottom: 0; }
-  #topInfo .topImageAffiche {
-    max-height: 250px;
-    max-width: 250px;
-    margin: 0 auto; }
-  #topInfo table {
-    border: none;
-    margin: 0;
-    color: #FFFFFF; }
-    #topInfo table tr td a {
-      color: #1B1C1D;
-      border-bottom: 1px solid #1B1C1D; }
-  #topInfo img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    max-height: 250px;
-    max-width: 250px;
-    box-shadow: 1px 1px 2px #1B1C1D; }
-  #topInfo h1 {
-    font-size: 2.5em;
-    margin-bottom: 0; }
-  #topInfo h2 {
-    margin-top: 0;
-    color: #b3b3b3;
-    font-size: 1.2em;
-    font-style: italic; }
+.admin h1 {
+  margin-bottom: 2em !important; }
 
-.ui.episode.titreen {
-  margin-top: 0;
-  color: #b3b3b3;
-  font-size: 1.2em;
-  font-style: italic; }
+.pushed {
+  margin-left: 15rem; }
 
-.ficheContainer {
-  max-width: 1280px;
-  margin: 0 auto !important; }
+.moveSeason:hover,
+.moveEpisode:hover {
+  cursor: grab; }
 
-#menuFiche {
-  padding-top: 0;
-  padding-bottom: inherit; }
-  #menuFiche .menu.ficheContainer {
-    margin: auto !important; }
-    #menuFiche .menu.ficheContainer .ficheContainer {
-      max-width: 1280px; }
-  #menuFiche .menu:last-child {
-    border: none;
-    border-radius: 0; }
-  #menuFiche .menu > .item:first-child, #menuFiche .menu .item:last-child {
-    border: none; }
-  #menuFiche .menu .item {
-    border-radius: 0; }
-  #menuFiche .column {
-    background: #FFFFFF;
-    box-shadow: 0 1px 2px 0 rgba(34, 36, 38, 0.15); }
-  #menuFiche a {
-    height: 80px;
-    font-size: 1.2em; }
-    #menuFiche a.active {
-      background: #213d64;
-      color: #FFFFFF; }
-
-.circleNote {
-  width: 200px;
-  height: 200px;
-  stroke: #1074b2;
-  drop-shadow: 1px 1px 2px #1B1C1D; }
-  .circleNote text {
-    font-size: 3em;
-    stroke: none; }
-
-#rotate90 {
-  -webkit-transform: rotate(-90deg);
-  -moz-transform: rotate(-90deg);
-  -ms-transform: rotate(-90deg);
-  -o-transform: rotate(-90deg);
-  transform: rotate(-90deg); }
-
-#ShowReviewCount p {
-  text-align: center; }
-
-#seasonsLine {
-  margin-left: inherit;
-  margin-right: inherit; }
-
-/*
- Menu list seasons
- */
-#menuListSeasons {
-  padding-top: inherit;
-  padding-bottom: inherit; }
-  #menuListSeasons .column {
-    padding-left: inherit;
-    padding-right: inherit; }
-  #menuListSeasons .segment {
-    border-radius: inherit;
-    background: #213d64; }
-  #menuListSeasons .ui.secondary.menu .item {
-    color: #FFFFFF; }
-  #menuListSeasons .ui.secondary.menu .item:hover {
-    background: rgba(0, 0, 0, 0.3);
-    color: #FFFFFF; }
-  #menuListSeasons .ui.secondary.menu .active.item {
-    color: #1B1C1D;
-    background-color: #FFFFFF; }
-    #menuListSeasons .ui.secondary.menu .active.item:hover {
-      color: #1B1C1D;
-      background-color: #FFFFFF; }
-
-/*
- LIST ARTICLES
- */
-#LeftBlock {
-  margin-right: 2em; }
-  #LeftBlock .article.item {
-    padding: 1em; }
-    #LeftBlock .article.item .header {
-      background-color: inherit; }
-    #LeftBlock .article.item:hover {
-      background: #d4e4f0 none; }
-    #LeftBlock .article.item .image.article {
-      height: 120px;
-      width: 120px; }
-      #LeftBlock .article.item .image.article img {
-        height: 100%;
-        width: 100%;
-        object-fit: cover; }
-      #LeftBlock .article.item .image.article p {
-        color: #FFFFFF;
-        width: 100%;
-        position: absolute;
-        top: 72%;
-        text-align: center;
-        z-index: 2;
-        font-size: 1.2em;
-        font-weight: bold; }
-
-#LeftBlock .segment, #RightBlock .segment {
-  border: none;
-  background-color: #FFFFFF;
-  border-radius: 0;
-  box-shadow: none;
-  padding: 2rem;
-  width: 100%; }
-#LeftBlock .inverted.segment, #RightBlock .inverted.segment {
-  background-color: #1B1C1D;
-  padding: 1rem; }
-#LeftBlock h1, #RightBlock h1 {
-  color: #213d64;
+#messageTop {
+  margin-top: 1rem;
   margin-bottom: 1rem; }
 
-.segment#ListSeasons {
-  padding: 0; }
-  .segment#ListSeasons h1 {
-    padding: 2rem;
-    margin-bottom: 0; }
+.verticalDivider {
+  position: relative; }
 
-#ListSeasons table {
-  border: none;
-  margin: 0; }
-  #ListSeasons table tr td a {
-    color: black;
-    border-bottom: 1px solid #1B1C1D; }
-  #ListSeasons table tr:nth-child(odd) {
-    background-color: #d4e4f0; }
-#ListSeasons .AllSeasons {
-  padding: 2rem;
-  text-align: right;
-  text-decoration: underline; }
-
-#ListAvis .grid {
-  margin-left: 0; }
-#ListAvis img {
-  margin: 0 auto; }
-#ListAvis .AvisResume {
-  text-align: justify;
-  word-wrap: break-word; }
-#ListAvis .AvisBox {
-  padding: 0;
-  overflow: auto; }
-#ListAvis table {
-  border-radius: inherit;
-  border: none;
-  border-left: 5px solid #767676; }
-  #ListAvis table tr:first-child td {
-    border-bottom: 1px solid #767676; }
-  #ListAvis table td.AvisStatus {
-    font-weight: bold;
-    font-size: 1.2em; }
-  #ListAvis table td.LireAvis {
-    text-align: right; }
-  #ListAvis table td.LireAvis a {
-    text-decoration: underline; }
-#ListAvis .AllAvis {
-  float: right; }
-
-#ButtonsActions {
-  width: 100%; }
-  #ButtonsActions .dropdown {
-    margin-bottom: 1rem;
-    text-align: center; }
-
-#LastArticles .row {
-  padding-bottom: 0; }
-#LastArticles .column {
-  padding: 0; }
-#LastArticles img {
-  max-height: 100px; }
-#LastArticles h2 {
-  color: #1074b2;
-  text-decoration: underline;
-  font-size: 1.2em;
-  font-style: italic;
-  text-shadow: none; }
-#LastArticles p.ResumeArticle {
-  text-shadow: none;
-  color: #1B1C1D; }
-#LastArticles .AllArticles {
-  padding-top: 2rem;
-  text-align: right;
-  text-decoration: underline; }
-
-.ui.secondary.menu .active.item {
-  color: #FFFFFF;
-  background-color: #213d64; }
-  .ui.secondary.menu .active.item:hover {
-    color: #FFFFFF;
-    background-color: #213d64; }
-
-#episodeDetails p {
-  color: #1B1C1D; }
-  #episodeDetails p.episodeResume {
-    text-align: justify; }
-#episodeDetails .ui.table thead th {
-  border-bottom: inherit; }
-#episodeDetails .segment {
-  border: 1px solid rgba(34, 36, 38, 0.15);
-  border-top: none; }
-#episodeDetails .active.item:hover {
-  color: #1B1C1D;
-  background-color: inherit; }
-
-.NoteSeason {
-  font-size: 4em;
-  margin-bottom: 1px; }
-
-.showMoreOrLess {
-  overflow: hidden;
-  height: 220px; }
-
-.cutAvis {
-  overflow: hidden;
-  max-height: 200px; }
-
-.fadeShowMoreOrLess {
-  position: relative;
-  bottom: 2em;
-  height: 1em;
-  background: -webkit-linear-gradient(rgba(255, 255, 255, 0) 0%, white 100%);
-  background-image: -moz-linear-gradient(rgba(255, 255, 255, 0) 0%, white 100%);
-  background-image: -o-linear-gradient(rgba(255, 255, 255, 0) 0%, white 100%);
-  background-image: linear-gradient(rgba(255, 255, 255, 0) 0%, white 100%);
-  background-image: -ms-linear-gradient(rgba(255, 255, 255, 0) 0%, white 100%); }
-
-.ListAll {
-  margin: 1em !important; }
-
-.chartMean {
-  padding-left: 0 !important;
-  padding-right: 0 !important; }
-
-.reactions {
-  padding-left: 3em;
-  text-align: left; }
-
-.PaginateRow .center.aligned {
-  margin-top: 2em;
-  text-align: center; }
+/*# sourceMappingURL=base_fiche.scss.map */
 
 /*# sourceMappingURL=base_fiche.css.map */
